# pyinit

./: .gitignore  README.md  pyproject.toml
asdf/: pyproject.toml
asdf/src/asdf/: cli.py
src/pyinit/: cli.py  project.py  res.py
src/pyinit/resources/: .gitignore  pyproject.toml
tests/: test_cli.py  test_project.py
