[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
# name = "pyinit"
authors = [{ name = "", email = "" }]
description = ""
version = "1.0.0"
requires-python = ">=3.12,<4"
dependencies = [
    # "gtkycu-utils@git+https://github.com/GTKYCU-IT/utils@v1.0.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "build"]

[project.scripts]
# pyinit = "pyinit.cli:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov --cov-report html --cov-report term-missing --cov-fail-under 95"
testpaths = ["tests"]

[tool.coverage.report]
exclude_also = ["if __name__ == .__main__.:"]

[tool.coverage.run]
source = ["src"]
